# GNotepad

./: README.md
src/: Makefile.am  configure.in  project_notepad.glade  project_notepad.glade.bak  project_notepad.gladep.bak
src/devcpp/: Makefile.win  config.h  project_notepad.dev
src/msvc/: config.h  project_notepad.dsp  project_notepad.dsw
src/src/: Makefile.am  callbacks.c  callbacks.h  interface.c  interface.h  main.c  support.c  support.h
